--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,29 @@
   "files.trimTrailingWhitespace": true,
   "python.linting.pylintEnabled": true,
   "python.linting.enabled": true,
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "black",
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#d4a962",
+    "activityBar.background": "#d4a962",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#227d5b",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#15202b99",
+    "sideBar.border": "#d4a962",
+    "statusBar.background": "#c9933a",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#a3762d",
+    "statusBarItem.remoteBackground": "#c9933a",
+    "statusBarItem.remoteForeground": "#15202b",
+    "tab.activeBorder": "#d4a962",
+    "titleBar.activeBackground": "#c9933a",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#c9933a99",
+    "titleBar.inactiveForeground": "#15202b99"
+  },
+  "peacock.color": "#c9933a",
+  "files.associations": {
+    "*.yaml": "home-assistant"
+  }
 }
